<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/book_name_edit" />

    <EditText
        android:id="@+id/author_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/author_name_edit" />

    <EditText
        android:id="@+id/description_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description_edit" />

    <EditText
        android:id="@+id/category_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category_edit" />

    <EditText
        android:id="@+id/quantity_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quantity_edit" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/delete_book"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="50"
            android:layout_margin="5dp"
            android:background="@drawable/buttonshape"
            android:text="@string/remove_book"
            android:textSize="20sp" />

        <Button
            android:id="@+id/save_book"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="50"
            android:layout_margin="5dp"
            android:background="@drawable/buttonshape"
            android:text="@string/save_book"
            android:textSize="20sp" />

    </LinearLayout>


</LinearLayout>