<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="72dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/librarianBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:text="@string/librarianLogin" />

    <Button
        android:id="@+id/studentBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/librarianBtn"
        android:layout_marginTop="50dp"
        android:text="@string/studentLogin" />

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/studentBtn"
        android:clickable="true"
        android:text="@string/signUp" />
</RelativeLayout>