<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentLoginActivity">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="72dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/usernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/imageLogo"
        android:layout_marginTop="100dp"
        android:layout_alignStart="@id/usernameText"
        android:text="@string/username" />

    <EditText
        android:id="@+id/usernameText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/usernameLabel"/>

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/usernameText"
        android:layout_alignStart="@id/passwordText"
        android:layout_marginTop="25dp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/passwordLabel"/>

    <Button
        android:id="@+id/studentBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/studentLogin" />

</RelativeLayout>